# tinkerforge2mqtt

./: README.md  cli.py  dev-cli.py  discover_test.py  pyproject.toml  requirements.dev.txt  requirements.txt
.run/: Template Python tests.run.xml  Unittests ___all___.run.xml
tinkerforge2mqtt/: __init__.py  user_settings.py
tinkerforge2mqtt/cli_app/: __init__.py  discovering.py  publish.py  settings.py  systemd.py
tinkerforge2mqtt/cli_dev/: __init__.py  __main__.py  code_style.py  packaging.py  testing.py  update_readme_history.py
tinkerforge2mqtt/device_map/: brick_hat_zero.py  bricklet_humidity_v2.py  bricklet_industrial_dual_relay.py  bricklet_motion_detector_v2.py  bricklet_solid_state_relay_v2.py  bricklet_temperature_v2.py  bricklet_voltage_current_v2.py
tinkerforge2mqtt/device_map_utils/: base.py
tinkerforge2mqtt/device_registry/: devices_handler.py
tinkerforge2mqtt/tests/: __init__.py  test_project_setup.py  test_readme.py
